@@ -125,6 +125,18 @@
     "19": {
       "name": "Gauderios",
       "description": "Rock 'n Roll and Bets"
+    },
+    "20": {
+      "name": "Lamenta Caelorum",
+      "description": "In tears it strengthens"
+    },
+    "21": {
+      "name": "A Soulless Purpose",
+      "description": "A throne without a lord"
+    },
+    "22": {
+      "name": "iD03",
+      "description": "**401** Access Required"
     }
   }
 }
