@@ -125,6 +125,18 @@
     "19": {
       "name": "Gaudérios",
       "description": "Muito rock e apostas"
+    },
+    "20": {
+      "name": "Lamenta Caelorum",
+      "description": "Aos prantos se fortalece"
+    },
+    "21": {
+      "name": "Um Propósito Sem Alma",
+      "description": "Um trono sem lorde"
+    },
+    "22": {
+      "name": "iD03",
+      "description": "**401** Acesso Nescessário"
     }
   }
 }
